--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -5,12 +5,17 @@
     <title>Title</title>
 </head>
 <body>
-<div th:text="${msg}"></div>
-<div th:utext="${msg}"></div>
+<!--<div th:text="${msg}"></div>-->
+<!--<div th:utext="${msg}"></div>-->
 
-<hr>
+<!--<hr>-->
 
-<h3 th:each="user:${users}" th:text="${user}"></h3>
+<!--<h3 th:each="user:${users}" th:text="${user}"></h3>-->
+
+<form action="fileUpload" method="post" enctype="multipart/form-data">
+    <p><input type="file" name="fileName"/></p>
+    <p><input type="submit" value="Submit"/></p>
+</form>
 
 </body>
 </html>
