--- a/src/main/resources/templates/tables.html
+++ b/src/main/resources/templates/tables.html
@@ -249,10 +249,10 @@
                     </div>
 
                     <div>
-                        <form method="POST" enctype="multipart/form-data" action="/fileUpload">
+                        <form method="POST" enctype="multipart/form-data" th:action="@{fileUpload}">
                             <table>
-                                <tr><td></td><td><input type="file" name="file" /></td></tr>
-                                <tr><td></td><td><input type="submit" value="Upload" /></td></tr>
+                                <tr><td></td><td><input type="file" name="file"/></td></tr>
+                                <tr><td></td><td><input type="submit" value="Upload"/></td></tr>
                             </table>
                         </form>
                     </div>
