--- a/src/main/resources/templates/files.html
+++ b/src/main/resources/templates/files.html
@@ -9,16 +9,15 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>文件管理</title>
+    <title>SCU Course - 文件管理</title>
 
     <!-- Custom fonts for this template -->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="css/sb-admin-2.css" rel="stylesheet">
 
     <!-- Custom styles for this page -->
     <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
@@ -50,85 +49,6 @@
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>主页</span></a>
             </li>
-
-            <!-- Divider -->
-<!--            <hr class="sidebar-divider">-->
-
-            <!-- Heading -->
-<!--            <div class="sidebar-heading">-->
-<!--                Interface-->
-<!--            </div>-->
-
-            <!-- Nav Item - Pages Collapse Menu -->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"-->
-<!--                    aria-expanded="true" aria-controls="collapseTwo">-->
-<!--                    <i class="fas fa-fw fa-cog"></i>-->
-<!--                    <span>Components</span>-->
-<!--                </a>-->
-<!--                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">-->
-<!--                    <div class="bg-white py-2 collapse-inner rounded">-->
-<!--                        <h6 class="collapse-header">Custom Components:</h6>-->
-<!--                        <a class="collapse-item" href="buttons.html">Buttons</a>-->
-<!--                        <a class="collapse-item" href="cards.html">Cards</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </li>-->
-
-            <!-- Nav Item - Utilities Collapse Menu -->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"-->
-<!--                    aria-expanded="true" aria-controls="collapseUtilities">-->
-<!--                    <i class="fas fa-fw fa-wrench"></i>-->
-<!--                    <span>Utilities</span>-->
-<!--                </a>-->
-<!--                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"-->
-<!--                    data-parent="#accordionSidebar">-->
-<!--                    <div class="bg-white py-2 collapse-inner rounded">-->
-<!--                        <h6 class="collapse-header">Custom Utilities:</h6>-->
-<!--                        <a class="collapse-item" href="utilities-color.html">Colors</a>-->
-<!--                        <a class="collapse-item" href="utilities-border.html">Borders</a>-->
-<!--                        <a class="collapse-item" href="utilities-animation.html">Animations</a>-->
-<!--                        <a class="collapse-item" href="utilities-other.html">Other</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </li>-->
-
-            <!-- Divider -->
-<!--            <hr class="sidebar-divider">-->
-
-<!--            &lt;!&ndash; Heading &ndash;&gt;-->
-<!--            <div class="sidebar-heading">-->
-<!--                Addons-->
-<!--            </div>-->
-
-            <!-- Nav Item - Pages Collapse Menu -->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"-->
-<!--                    aria-expanded="true" aria-controls="collapsePages">-->
-<!--                    <i class="fas fa-fw fa-folder"></i>-->
-<!--                    <span>Pages</span>-->
-<!--                </a>-->
-<!--                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">-->
-<!--                    <div class="bg-white py-2 collapse-inner rounded">-->
-<!--                        <h6 class="collapse-header">Login Screens:</h6>-->
-<!--                        <a class="collapse-item" href="login.html">Login</a>-->
-<!--                        <a class="collapse-item" href="register.html">Register</a>-->
-<!--                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>-->
-<!--                        <div class="collapse-divider"></div>-->
-<!--                        <h6 class="collapse-header">Other Pages:</h6>-->
-<!--                        <a class="collapse-item" href="404.html">404 Page</a>-->
-<!--                        <a class="collapse-item" href="blank.html">Blank Page</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </li>-->
-
-            <!-- Nav Item - Charts -->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link" href="charts.html">-->
-<!--                    <i class="fas fa-fw fa-chart-area"></i>-->
-<!--                    <span>Charts</span></a>-->
-<!--            </li>-->
 
             <!-- Nav Item - Tables -->
             <li class="nav-item active">
@@ -167,7 +87,6 @@
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
                         <div class="topbar-divider d-none d-sm-block"></div>
-
                         <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
@@ -207,7 +126,6 @@
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
                     <h1 class="h3 mb-2 text-gray-800">文件管理</h1>
-                    <p class="mb-4">请各组将项目周报命名为“研究与开发实践-XMXX-第XX周-项目周报-XX（项目名称）“，方便查看</p>
 
                     <div th:if="${message}">
                         <h2 th:text="${message}"/>
@@ -222,15 +140,9 @@
                         </form>
                     </div>
 
-<!--                    <div>-->
-<!--                        <ul>-->
-<!--                            <li th:each="file : ${files}">-->
-<!--                                <a th:href="${file}" th:text="${file}" />-->
-<!--                            </li>-->
-<!--                        </ul>-->
-<!--                    </div>-->
                     <hr>
-                    <!-- DataTales Example -->
+
+                    <!-- 文件列表 -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
                             <h6 class="m-0 font-weight-bold text-primary">文件列表</h6>
@@ -244,7 +156,6 @@
                                             <th>大小</th>
                                             <th>上传者</th>
                                             <th>上传时间</th>
-
                                         </tr>
                                     </thead>
                                     <tfoot>
@@ -257,24 +168,11 @@
                                     </tfoot>
                                     <tbody>
                                         <tr th:each="file : ${files}">
-<!--                                            <th><a th:href="${file}" th:text="${file}" /></th>-->
-<!--                                            <td><a th:href="${file}" th:text="${#strings.substringAfter(file, 'files/')}" /></td>-->
-<!--                                            <td><a th:href="${file}" th:text="${file}" /></td>-->
-                                            <td><a th:href="${file.url}" th:text="${file.name}" /></td>
+                                            <td><a th:href="${file.url}" th:text="${file.file_name}" /></td>
                                             <td th:text="${file.size}"></td>
                                             <td th:text="${file.creator}"></td>
                                             <td th:text="${file.date_created}"></td>
                                         </tr>
-<!--                                        <tr>-->
-<!--                                            <td>Tiger Nixon</td>-->
-<!--                                            <td>System Architect</td>-->
-<!--                                            <td>Edinburgh</td>-->
-<!--                                        </tr>-->
-<!--                                        <tr>-->
-<!--                                            <td>Garrett Winters</td>-->
-<!--                                            <td>Accountant</td>-->
-<!--                                            <td>Tokyo</td>-->
-<!--                                        </tr>-->
                                     </tbody>
                                 </table>
                             </div>
@@ -291,7 +189,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2020</span>
+                        <span>Copyright &copy; Vincent 2020</span>
                     </div>
                 </div>
             </footer>
@@ -329,21 +227,21 @@
     </div>
 
     <!-- Bootstrap core JavaScript-->
-    <script th:src="@{vendor/jquery/jquery.min.js}"></script>
-    <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Core plugin JavaScript-->
-    <script th:src="@{vendor/jquery-easing/jquery.easing.min.js}"></script>
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script th:src="@{js/sb-admin-2.min.js}"></script>
+    <script src="js/sb-admin-2.min.js"></script>
 
     <!-- Page level plugins -->
-    <script th:src="@{vendor/datatables/jquery.dataTables.min.js}"></script>
-    <script th:src="@{vendor/datatables/dataTables.bootstrap4.min.js}"></script>
+    <script src="vendor/datatables/jquery.dataTables.min.js"></script>
+    <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
     <!-- Page level custom scripts -->
-    <script th:src="@{js/demo/datatables-demo.js}"></script>
+    <script src="js/demo/datatables-demo.js"></script>
 
 </body>
 
