--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,86 +9,82 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Login</title>
+    <title>SCU Course - 登录</title>
 
     <!-- Custom fonts for this template-->
-    <link th:href="@{vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
-    <link th:href="@{https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i}"
-            rel="stylesheet">
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+        rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link th:href="@{css/sb-admin-2.css}" rel="stylesheet">
+    <link href="css/sb-admin-2.css" rel="stylesheet">
 
 </head>
 
 <body class="bg-gradient-primary">
 
-<div class="container">
+    <div class="container">
 
-    <!-- Outer Row -->
-    <div class="row justify-content-center">
-
-        <div class="col-xl-10 col-lg-12 col-md-9">
-
-            <div class="card o-hidden border-0 shadow-lg my-5">
-                <div class="card-body p-0">
-                    <!-- Nested Row within Card Body -->
-                    <div class="row">
-                        <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
-                        <div class="col-lg-6">
-                            <div class="p-5">
-                                <div class="text-center">
-                                    <h1 class="h4 text-gray-900 mb-4">Welcome!</h1>
-                                </div>
-                                <p style="color: red" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
-                                <form class="user" th:action="@{userLogin}">
-                                    <div class="form-group">
-                                        <input name="username" type="text" class="form-control form-control-user"
-                                               id="InputUsername" placeholder="Username">
+        <!-- Outer Row -->
+        <div class="row justify-content-center">
+            <div class="col-xl-10 col-lg-12 col-md-9">
+                <div class="card o-hidden border-0 shadow-lg my-5">
+                    <div class="card-body p-0">
+                        <!-- Nested Row within Card Body -->
+                        <div class="row">
+                            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                            <div class="col-lg-6">
+                                <div class="p-5">
+                                    <div class="text-center">
+                                        <h1 class="h4 text-gray-900 mb-4">欢迎！</h1>
                                     </div>
-                                    <div class="form-group">
-                                        <input name="password" type="password" class="form-control form-control-user"
-                                               id="InputPassword" placeholder="Password">
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="custom-control custom-checkbox small">
-                                            <input name="remember" type="checkbox" class="custom-control-input" id="customCheck">
-                                            <label class="custom-control-label" for="customCheck">Remember Me</label>
+                                    <p style="color: red" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
+                                    <form class="user" th:action="@{userLogin}">
+                                        <div class="form-group">
+                                            <input name="username" type="text" class="form-control form-control-user"
+                                                id="InputUsername" placeholder="用户名">
                                         </div>
-                                    </div>
-                                    <button type="submit" class="btn btn-primary btn-user btn-block">
-                                        Login
-                                    </button>
+                                        <div class="form-group">
+                                            <input name="password" type="password"
+                                                class="form-control form-control-user" id="InputPassword"
+                                                placeholder="密码">
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="custom-control custom-checkbox small">
+                                                <input name="remember" type="checkbox" class="custom-control-input"
+                                                    id="customCheck">
+                                                <label class="custom-control-label" for="customCheck">记住密码</label>
+                                            </div>
+                                        </div>
+                                        <button type="submit" class="btn btn-primary btn-user btn-block">
+                                            登录
+                                        </button>
+                                    </form>
                                     <hr>
-                                </form>
-                                <hr>
-                                <div class="text-center">
-                                    <a class="small" th:href="@{forgot-password}">Forgot Password?</a>
-                                </div>
-                                <div class="text-center">
-                                    <a class="small" th:href="@{register}">Create an Account!</a>
+                                    <div class="text-center">
+                                        <a class="small" th:href="@{forgot-password}">忘记密码</a>
+                                    </div>
+                                    <div class="text-center">
+                                        <a class="small" th:href="@{register}">注册账号</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
-
     </div>
 
-</div>
+    <!-- Bootstrap core JavaScript-->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-<!-- Bootstrap core JavaScript-->
-<script th:src="@{vendor/jquery/jquery.min.js}"></script>
-<script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+    <!-- Core plugin JavaScript-->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-<!-- Core plugin JavaScript-->
-<script th:src="@{vendor/jquery-easing/jquery.easing.min.js}"></script>
-
-<!-- Custom scripts for all pages-->
-<script th:src="@{js/sb-admin-2.min.js}"></script>
+    <!-- Custom scripts for all pages-->
+    <script src="js/sb-admin-2.min.js"></script>
 
 </body>
 
