--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -9,15 +9,15 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Register</title>
+    <title>SCU Course - 注册</title>
 
     <!-- Custom fonts for this template-->
-    <link th:href="@{vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
-    <link th:href="@{https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i}"
-        rel="stylesheet">
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link th:href="@{css/sb-admin-2.css}" rel="stylesheet">
+    <link href="css/sb-admin-2.css" rel="stylesheet">
 
 </head>
 
@@ -33,37 +33,37 @@
                     <div class="col-lg-7">
                         <div class="p-5">
                             <div class="text-center">
-                                <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
+                                <h1 class="h4 text-gray-900 mb-4">注册账号</h1>
                             </div>
                             <form class="user" th:action="@{userRegister}">
                                 <div class="form-group">
                                     <input name="username" type="text" class="form-control form-control-user" id="InputUsername"
-                                           placeholder="Username">
+                                           placeholder="用户名">
                                 </div>
                                 <div class="form-group">
                                     <input name="email" type="email" class="form-control form-control-user" id="InputEmail"
-                                        placeholder="Email Address">
+                                        placeholder="邮箱">
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
                                         <input name="password" type="password" class="form-control form-control-user"
-                                            id="InputPassword" placeholder="Password">
+                                            id="InputPassword" placeholder="密码">
                                     </div>
                                     <div class="col-sm-6">
                                         <input name="repeatPassword" type="password" class="form-control form-control-user"
-                                            id="RepeatPassword" placeholder="Repeat Password">
+                                            id="RepeatPassword" placeholder="确认密码">
                                     </div>
                                 </div>
                                 <button type="submit" class="btn btn-primary btn-user btn-block" data-toggle="modal" data-target="#RegisterSuccessModal">
-                                    Register Account
+                                    注册
                                 </button>
                             </form>
                             <hr>
                             <div class="text-center">
-                                <a class="small" th:href="@{forgot-password.html}">Forgot Password?</a>
+                                <a class="small" th:href="@{forgot-password.html}">忘记密码</a>
                             </div>
                             <div class="text-center">
-                                <a class="small" th:href="@{login.html}">Already have an account? Login!</a>
+                                <a class="small" th:href="@{login.html}">已经注册了？立刻登录！</a>
                             </div>
                         </div>
                     </div>
@@ -92,14 +92,14 @@
     </div>
 
     <!-- Bootstrap core JavaScript-->
-    <script th:src="@{vendor/jquery/jquery.min.js}"></script>
-    <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Core plugin JavaScript-->
-    <script th:src="@{vendor/jquery-easing/jquery.easing.min.js}"></script>
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script th:src="@{js/sb-admin-2.min.js}"></script>
+    <script src="js/sb-admin-2.min.js"></script>
 
 </body>
 
