--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,7 +36,7 @@
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
-                                        <h1 class="h4 text-gray-900 mb-4">欢迎！</h1>
+                                        <h1 class="h4 text-gray-900 mb-4">SCU Course</h1>
                                     </div>
                                     <p style="color: red" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
                                     <form class="user" th:action="@{userLogin}">
