--- a/src/main/resources/templates/files.html
+++ b/src/main/resources/templates/files.html
@@ -84,6 +84,9 @@
                         </button>
                     </form>
 
+                    <!-- 显示当前课程名 -->
+                    <span class="h4 text-xl-left font-weight-bold text-gray-800" th:text="${currentCourse}"></span>
+
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
                         <div class="topbar-divider d-none d-sm-block"></div>
