--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SCU Course - 概况</title>
+    <title>SCU Course - 概览</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -47,94 +47,25 @@
             <li class="nav-item active">
                 <a class="nav-link" href="index.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>概况</span></a>
+                    <span>概览</span></a>
             </li>
 
-            <!-- Divider -->
-<!--            <hr class="sidebar-divider">-->
-
-            <!-- Heading -->
-<!--            <div class="sidebar-heading">-->
-<!--                Interface-->
-<!--            </div>-->
-
-<!--            &lt;!&ndash; Nav Item - Pages Collapse Menu &ndash;&gt;-->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"-->
-<!--                    aria-expanded="true" aria-controls="collapseTwo">-->
-<!--                    <i class="fas fa-fw fa-cog"></i>-->
-<!--                    <span>Components</span>-->
-<!--                </a>-->
-<!--                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">-->
-<!--                    <div class="bg-white py-2 collapse-inner rounded">-->
-<!--                        <h6 class="collapse-header">Custom Components:</h6>-->
-<!--                        <a class="collapse-item" href="buttons.html">Buttons</a>-->
-<!--                        <a class="collapse-item" href="cards.html">Cards</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </li>-->
-
-<!--            &lt;!&ndash; Nav Item - Utilities Collapse Menu &ndash;&gt;-->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"-->
-<!--                    aria-expanded="true" aria-controls="collapseUtilities">-->
-<!--                    <i class="fas fa-fw fa-wrench"></i>-->
-<!--                    <span>Utilities</span>-->
-<!--                </a>-->
-<!--                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"-->
-<!--                    data-parent="#accordionSidebar">-->
-<!--                    <div class="bg-white py-2 collapse-inner rounded">-->
-<!--                        <h6 class="collapse-header">Custom Utilities:</h6>-->
-<!--                        <a class="collapse-item" href="utilities-color.html">Colors</a>-->
-<!--                        <a class="collapse-item" href="utilities-border.html">Borders</a>-->
-<!--                        <a class="collapse-item" href="utilities-animation.html">Animations</a>-->
-<!--                        <a class="collapse-item" href="utilities-other.html">Other</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </li>-->
-
-<!--            &lt;!&ndash; Divider &ndash;&gt;-->
-<!--            <hr class="sidebar-divider">-->
-
-<!--            &lt;!&ndash; Heading &ndash;&gt;-->
-<!--            <div class="sidebar-heading">-->
-<!--                Addons-->
-<!--            </div>-->
-
-<!--            &lt;!&ndash; Nav Item - Pages Collapse Menu &ndash;&gt;-->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"-->
-<!--                    aria-expanded="true" aria-controls="collapsePages">-->
-<!--                    <i class="fas fa-fw fa-folder"></i>-->
-<!--                    <span>Pages</span>-->
-<!--                </a>-->
-<!--                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">-->
-<!--                    <div class="bg-white py-2 collapse-inner rounded">-->
-<!--                        <h6 class="collapse-header">Login Screens:</h6>-->
-<!--                        <a class="collapse-item" href="login.html">Login</a>-->
-<!--                        <a class="collapse-item" href="register.html">Register</a>-->
-<!--                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>-->
-<!--                        <div class="collapse-divider"></div>-->
-<!--                        <h6 class="collapse-header">Other Pages:</h6>-->
-<!--                        <a class="collapse-item" href="404.html">404 Page</a>-->
-<!--                        <a class="collapse-item" href="blank.html">Blank Page</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </li>-->
-
-<!--            &lt;!&ndash; Nav Item - Charts &ndash;&gt;-->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link" href="charts.html">-->
-<!--                    <i class="fas fa-fw fa-chart-area"></i>-->
-<!--                    <span>Charts</span></a>-->
-<!--            </li>-->
-
-            <!-- Nav Item - Tables -->
+            <li class="nav-item">
+                <a class="nav-link" href="course.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>课程主页</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="files.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>课堂考勤</span></a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="files.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>文件管理</span></a>
             </li>
+
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
@@ -168,8 +99,6 @@
                         <i class="fa fa-bars"></i>
                     </button>
 
-                    <span class="h4 text-xl-left font-weight-bold text-gray-800" th:text="${username}" th:if="${not #strings.isEmpty(username)}"></span>
-
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
 
@@ -179,7 +108,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small" th:text="${username}"></span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600" th:text="${username}"></span>
                                 <img class="img-profile rounded-circle" th:src="@{images/undraw_profile.svg}">
                             </a>
                             <!-- Dropdown - User Information -->
@@ -209,7 +138,7 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">概况</h1>
+                        <h1 class="h3 mb-0 text-gray-800">概览</h1>
                     </div>
 
                     <!-- Quick Access -->
@@ -331,8 +260,13 @@
                                         <td th:text="${course.creator}"></td>
                                         <td th:text="${course.date_created}"></td>
                                         <td>
-                                            <button class="btn-primary" onclick="">进入</button>
-                                            <button class="btn-danger">删除</button>
+                                            <form th:action="@{/courseAction}">
+                                                <input hidden name="courseName" type="text" th:value="${course.course_name}">
+                                                <div th:switch="${course.joined}">
+                                                    <button th:case="'1'" type="submit" class="btn btn-sm btn-primary" name="action" value="enter">进入课程</button>
+                                                    <button th:case="'0'" type="submit" class="btn btn-sm btn-success" name="action" value="join">加入课程</button>
+                                                </div>
+                                            </form>
                                         </td>
                                     </tr>
                                     </tbody>
@@ -404,7 +338,6 @@
 
     <!-- Page level custom scripts -->
     <script src="js/demo/datatables-demo.js"></script>
-
 
 </body>
 
