--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -100,6 +100,7 @@
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
+    <script src="js/control.js"></script>
 
 </body>
 
