--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SCU Course - 概览</title>
+    <title>SCU Course - 主页</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -47,25 +47,50 @@
             <li class="nav-item active">
                 <a class="nav-link" href="index.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>概览</span></a>
+                    <span>主页</span></a>
             </li>
+
+            <!-- Divider -->
+            <hr class="sidebar-divider d-none d-md-block">
+
+            <div class="sidebar-heading" th:text="${currentCourse}"></div>
 
             <li class="nav-item">
                 <a class="nav-link" href="course.html">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>课程主页</span></a>
+                    <span>课程主页</span>
+                </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="files.html">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>课堂考勤</span></a>
+                    <span>公告</span>
+                </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="files.html">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>文件管理</span></a>
+                    <span>考勤</span>
+                </a>
             </li>
-
+            <li class="nav-item">
+                <a class="nav-link" href="files.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>投票</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="files.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>问卷调查</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="files.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>文件管理</span>
+                </a>
+            </li>
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
@@ -74,13 +99,6 @@
             <div class="text-center d-none d-md-inline">
                 <button class="rounded-circle border-0" id="sidebarToggle"></button>
             </div>
-
-            <!-- Sidebar Message -->
-            <!-- <div class="sidebar-card">
-                <img class="sidebar-card-illustration mb-2" th:src="@{images/undraw_rocket.svg}" alt="">
-                <p class="text-center mb-2"><strong>SB Admin Pro</strong> is packed with premium features, components, and more!</p>
-                <a class="btn btn-success btn-sm" href="https://startbootstrap.com/theme/sb-admin-pro">Upgrade to Pro!</a>
-            </div> -->
 
         </ul>
         <!-- End of Sidebar -->
@@ -108,7 +126,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600" th:text="${username}"></span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600" th:text="${currentUser}"></span>
                                 <img class="img-profile rounded-circle" th:src="@{images/undraw_profile.svg}">
                             </a>
                             <!-- Dropdown - User Information -->
@@ -180,7 +198,7 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="font-weight-bold text-info text-uppercase mb-1">提醒事项</div>
+                                            <div class="font-weight-bold text-info text-uppercase mb-1">待办事项</div>
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">0</div>
                                         </div>
                                         <div class="col-auto">
