Bulletin board complete

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -62,7 +62,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="files.html">
+                <a class="nav-link" href="bulletin.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>公告</span>
                 </a>
@@ -227,8 +227,6 @@
                     </div>
                     <!-- End of Quick Access -->
 
-<!--                    <div class="row">-->
-
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
                             <h6 class="m-0 font-weight-bold text-primary">创建 / 加入课程</h6>
@@ -243,7 +241,6 @@
                             </form>
                         </div>
                     </div>
-<!--                    </div>-->
 
                     <!-- 课程列表 -->
                     <div class="card shadow mb-4">
