--- a/src/main/resources/templates/bulletin.html
+++ b/src/main/resources/templates/bulletin.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Blank</title>
+    <title th:text="|${currentCourse} - 公告板|"></title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -45,7 +45,7 @@
         <li class="nav-item">
             <a class="nav-link" href="index.html">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
-                <span>Dashboard</span></a>
+                <span>主页</span></a>
         </li>
 
         <!-- Divider -->
@@ -72,6 +72,8 @@
                 <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                     <i class="fa fa-bars"></i>
                 </button>
+
+                <span class="h4 text-xl-left font-weight-bold text-gray-800" th:text="${currentCourse}"></span>
 
                 <!-- Topbar Navbar -->
                 <ul class="navbar-nav ml-auto">
@@ -114,8 +116,42 @@
             <div class="container-fluid">
 
                 <!-- Page Heading -->
-                <h1 class="h3 mb-3 text-gray-800">您尚未选择任何课程！</h1>
-                <h1 class="h6 text-gray-800">请先在系统主页中选择课程，方可进入课程管理页面</h1>
+                <h1 class="h3 mb-3 text-gray-800">公告板</h1>
+
+                <form th:action="@{/bulletinCreate}">
+                <div class="card shadow mb-4">
+
+                    <div class="card-header">
+                        <nav class="navbar">
+                            <span class="navbar-brand font-weight-bold text-primary">新公告</span>
+                            <input name="title" placeholder="标题" class="form-control-sm border-primary">
+                            <ul class="navbar-nav ml-auto">
+                                <li class="nav-item">
+                                    <button class="btn btn-sm btn-primary">发布</button>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="card-body">
+                        <textarea name="content" class="border-primary form-control" rows="5" placeholder="公告内容"></textarea>
+                    </div>
+                </div>
+                </form>
+
+                <div th:each="bulletin : ${bulletins}" class="card shadow mb-4">
+                    <div class="card-header">
+                        <nav class="navbar">
+                            <span class="navbar-brand font-weight-bold text-primary" th:text="${bulletin.title}"></span>
+                            <ul class="navbar-nav ml-auto">
+                                <li class="nav-item">
+                                    <span th:text="|${bulletin.creator} 发表于 ${bulletin.date_created}|"></span>
+<!--                                    <button class="btn btn-sm btn-danger">删除</button>-->
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="card-body" th:text="${bulletin.content}"></div>
+                </div>
 
 
             </div>
